# patela

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env
.github/workflows/: ci.yaml
client/: Cargo.toml  build.rs
client/src/: api.rs  lib.rs  main.rs  tpm.rs
client/templates/: torrc
misc/: client-cert.sh  tpmstuff.sh  virsh.xml
server/: Cargo.toml
server/migrations/: 20250227084410_init.sql  20251014081633_v2.down.sql  20251014081633_v2.up.sql
server/src/: api.rs  db.rs  lib.rs  main.rs  tor_config.rs  tpm.rs
server/tests/: torrc
