[workspace]

members = [
    "client",
    "server",
]

resolver = "2"

[patch.crates-io]
ff = { git = "https://github.com/tarcieri/ff", branch = "rand_core/v0.10.0-rc-2" }
group = { git = "https://github.com/tarcieri/group", branch = "rand_core/v0.10.0-rc-2" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }

p521       = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
sm2        = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256       = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
ecdsa      = { git = "https://github.com/RustCrypto/signatures.git" }
