[package]
name = "patela-client"
version = "0.1.0"
edition = "2024"

[dependencies]
patela-server = { path = "../server" }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.4"
lazy_static = "1.5.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = { version = "0.37", features = ["serde"] }
systemctl = "0.5.0"
tera = "1.20.0"
tokio = { version = "1.47", features = ["full"] }
tss-esapi = "7.6.0"
rtnetlink = "0.18"
nftnl = "0.7.0"
futures = "0.3.31"
netlink-packet-route = "0.25"
netlink-packet-core = "0.8"
netlink-proto = "0.12"
ipnetwork = "0.21"
etc-passwd = "0.2.2"
actix-tls = "3.4.0"
rustls-pemfile = "2.2.0"
tar = "0.4.44"
aes-gcm = "0.10.3"
mnl = "0.2.2"

[build-dependencies]
const-gen = "1.6.8"

[package.metadata.deb]
maintainer = "Osservatorio Nessuno <admin@osservatorionessuno.org>"
copyright = "2025, Osservatorio Nessuno <admin@osservatorionessuno.org>"
license-file = ["../LICENSE", "2"]
extended-description = """\
The agent for tor relay configuration.
"""
depends = "libtss2-dev"
section = "utility"
priority = "optional"
assets = [
    ["target/release/patela-client", "usr/bin/", "755"],
]
