[package]
name = "patela-client"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-tls = "3.4.0"
aes = "0.9.0-rc.1"
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0.1" }
clap = { version = "4.5.51", features = ["derive"] }
elliptic-curve = { version = "0.14.0-rc.16", features = ["alloc", "pkcs8", "arithmetic", "serde"] }
etc-passwd = "0.2.2"
flate2 = "1.1.5"
futures = "0.3.31"
hex = "0.4.3"
ipnetwork = "0.21"
mnl = "0.2.3"
netlink-packet-core = "0.8"
netlink-packet-route = "0.25"
netlink-proto = "0.12"
nftnl = "0.9"
patela-server = { path = "../server" }
pem = "3.0.6"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.9"
rtnetlink = "0.18"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = { version = "0.11.0-rc.2", features = ["oid"] }
sysinfo = { version = "0.37", features = ["serde"] }
systemctl = "0.5.0"
tar = "0.4.44"
tokio = { version = "1.48", features = ["full"] }
tss-esapi = { git = "https://github.com/gibix/rust-tss-esapi", branch = "baloo/make-credentials", features = ["rustcrypto", "integration-tests", "serde", "abstraction", "p256"] }
[build-dependencies]
const-gen = "1.6.8"

[dev-dependencies]
rand = "0.8"

[package.metadata.deb]
maintainer = "Osservatorio Nessuno <admin@osservatorionessuno.org>"
copyright = "2025, Osservatorio Nessuno <admin@osservatorionessuno.org>"
license-file = ["../LICENSE", "2"]
extended-description = """\
The agent for tor relay configuration.
"""
depends = "libtss2-dev"
section = "utility"
priority = "optional"
assets = [
    ["target/release/patela-client", "usr/bin/", "755"],
]
