[package]
name = "patela-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-tls = { version = "3.4.0", features = ["rustls-0_23"] }
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.2"
anyhow = "1.0.100"
biscuit-auth = "6.0.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["env", "derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11"
ipnetwork = "0.21"
json-patch = "4.1.0"
lazy_static = "1.5"
log = "0.4.28"
regex = "1.12.1"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
sysinfo = { version = "0.37", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.47", features = ["full"] }
x509-parser = "0.18.0"
colored = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
